--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -28,7 +28,6 @@
 
     .userAsses {
       display: flex;
-      background: rgba(255, 255, 255, 0.15);
       // border: 1px solid #ff2c2c;
       border-radius: 25px;
       justify-content: space-between;
@@ -70,21 +69,29 @@
         display: flex;
         justify-content: space-between;
         padding: 10px 5px 10px 20px;
+        margin-top: 40px;
+        border-radius: 25px;
+        height: 40px;
+        align-items: center;
 
         a {
           text-decoration: none;
           color: #fff;
         }
       }
+
+      div:nth-child(1) {
+        margin-top: 20px;
+      }
     }
 
     .middle_container {
       width: 100%;
-      height: 100px;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      border-bottom: 3px solid white;
+      gap: 40px;
+      margin: 20px 0;
 
       div {
         width: 100%;
@@ -93,16 +100,22 @@
         font-size: 20px;
         display: flex;
         justify-content: space-between;
-        padding: 0 5px 0 20px;
+        padding: 10px 5px 10px 20px;
+        border-radius: 25px;
+        display: flex;
+        height: 40px;
+        align-items: center;
       }
     }
 
     .bottom_container {
+      border-top: 3px solid #fff;
       width: 100%;
-      height: 100px;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
+      // gap: 30px;
+      // margin: 20px 0;
 
       .arrow_container {
         width: 100%;
@@ -112,7 +125,11 @@
         font-weight: 400;
         display: flex;
         justify-content: space-between;
-        padding: 0 5px 0 20px;
+        margin-top: 20px;
+        padding: 10px 5px 10px 20px;
+        border-radius: 25px;
+        height: 40px;
+        align-items: center;
       }
     }
     .arrows {
