--- a/src/pages/entries/Entries.module.scss
+++ b/src/pages/entries/Entries.module.scss
@@ -1,6 +1,221 @@
 .container {
   display: grid;
   grid-template-columns: 300px 1fr;
+
+  .modalCreateEntries {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba($color: #000000, $alpha: 0.2);
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .createEntriesContent {
+      width: 800px;
+      height: 600px;
+      background: #ff8181;
+      border-radius: 25px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      padding: 20px;
+
+      .selectCenter,
+      .centerSettings {
+        background: #fff;
+        border-radius: 25px;
+        padding: 20px;
+      }
+
+      .centerSettings {
+        .input {
+          width: 100%;
+          margin-bottom: 20px;
+          height: 40px;
+          border-radius: 4px;
+          border: 1px solid rgba(0, 0, 0, 0.3);
+          padding-left: 15px;
+          outline: none;
+        }
+
+        .select {
+          height: 40px;
+          margin-bottom: 20px;
+          z-index: 100;
+        }
+
+        .radio {
+          margin-top: 20px;
+          margin-left: 20px;
+
+          div {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+        }
+
+        .btn {
+          display: flex;
+          justify-content: center;
+          margin-top: 30px;
+
+          button {
+            padding: 5px 20px;
+            background: #ff8181;
+            color: #fff;
+            border-radius: 50px;
+          }
+        }
+      }
+    }
+  }
+
+  .content {
+    max-width: 1000px;
+    margin: 20px auto;
+    background: #fff;
+    min-height: calc(100vh - 40px);
+    border-radius: 25px;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
+
+    .entries {
+      position: relative;
+
+      .search_entries {
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;
+        background: #000;
+        padding: 10px 70px;
+        background: #ff8181;
+        display: flex;
+        justify-content: space-between;
+
+        button {
+          border: 0;
+          border-radius: 50px;
+          width: 200px;
+          font-size: 16px;
+          color: #fff;
+          background: rgba($color: #f93333, $alpha: 0.6);
+          box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1);
+          transition: all 0.2s ease-in-out;
+
+          &:hover {
+            transform: scale(1.05);
+          }
+        }
+      }
+
+      label {
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        height: 40px;
+        border-radius: 50px;
+        width: 400px;
+
+        .BsSearch {
+          display: flex;
+          width: 50px;
+          justify-content: center;
+          cursor: pointer;
+        }
+
+        input {
+          border: 0;
+          width: 100%;
+          outline: none;
+          background-color: transparent;
+        }
+      }
+
+      .nav {
+        padding: 0 70px;
+        margin-top: 10px;
+        display: flex;
+        gap: 20px;
+
+        button {
+          width: 150px;
+          height: 40px;
+          border: 0;
+          border-radius: 55px;
+          background-color: transparent;
+          background: #ff8181;
+          color: #fff;
+          // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.08);
+
+          // border-bottom: 2px solid #333;
+          opacity: 0.3;
+          font-weight: 400;
+          font-size: 20px;
+          line-height: 24px;
+          cursor: pointer;
+          transition: all 0.2s ease-in-out;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+
+        .active_nav {
+          opacity: 1;
+        }
+      }
+
+      .items {
+        padding: 0 70px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+        margin-top: 20px;
+
+        .item {
+          width: 100%;
+          height: 213px;
+          border: 1px solid #333;
+          border: 1px solid rgba(190, 190, 190, 0.7);
+          border-radius: 38px;
+          margin-bottom: 35px;
+          padding: 15px 25px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          transition: all 0.2s ease-in-out;
+
+          &:hover {
+            box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
+            transform: scale(1.015);
+          }
+
+          .bottom {
+            display: flex;
+            justify-content: space-between;
+
+            h2:nth-child(2) {
+              margin-top: 20px;
+            }
+
+            .address {
+              display: flex;
+              align-items: flex-end;
+            }
+          }
+
+          h2 {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+          }
+        }
+      }
+    }
+  }
 }
 
 .mobile_version {
